--- a/src/assets/css/_global.scss
+++ b/src/assets/css/_global.scss
@@ -2,6 +2,9 @@
 
 html {
     width: 100%;
+    background-color: $backgroundColor;
+    font-family: $font;
+    font-weight: $lightFont;
 }
 
 .login {
@@ -30,7 +33,106 @@ html {
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        border-radius: 20px;
-        z-index: 1;
+        text-align: center;
+        margin: auto;
+        padding: 2rem;
+        min-width: 35%;
+        background: $neoUpGradient;
+        z-index: 3;
+        border-radius: 7px;
+        //background-color: $backgroundColor;
+        input {
+            padding: .5rem;
+            margin: 1rem;
+            width: 75%;
+            border-radius: 7px;
+        }
     }
+}
+h1,h2, h3, h4, h5, h6 {
+    margin: 1rem;
+    font-weight: $heavyFont !important;
+}
+.card {
+    padding: .2rem;
+    width: 11rem;
+    height: 11rem;
+    max-width: 300px;
+    max-height: 300px;
+    position: relative;
+    margin: 1rem auto;
+    //display: block;
+    background: $neoUpGradient;
+    border-radius: 7px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.neo-up {
+    box-shadow: $neoUpShadow;
+}
+
+.cardHolder {
+   display: flex;
+   flex-flow: row wrap;
+   justify-content: space-around;
+   .card{
+       margin: 1rem;
+   }
+}
+
+.title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    position: sticky;
+    top: 0;
+    background-color: $backgroundColor;
+    z-index: 1;
+    box-shadow: $boxShadow;
+    .primary {
+        margin: .75rem;
+    }
+}
+.modal-wrapper {
+    .modal {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        margin: auto;
+        padding: 2rem;
+        min-width: 75%;
+        max-height: 100%;
+        overflow-y: auto;
+        background: $neoUpGradient;
+        z-index: 3;
+        border-radius: 7px;
+        //background-color: $backgroundColor;
+        input {
+            padding: .5rem;
+            margin: 1rem;
+            width: 75%;
+        }
+    }
+    .modal-bg {
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background-color: $textColor;
+        opacity: .8;
+        top: 0;
+        left: 0;
+        z-index: 2;
+    }
+}
+
+.specificClientName{
+    margin: auto;
 }
