--- a/src/assets/css/_global.scss
+++ b/src/assets/css/_global.scss
@@ -7,6 +7,15 @@ html {
     font-weight: $lightFont;
 }
 
+input {
+    background-color: transparent;
+    border-radius: 7px;
+    border: 3px solid $gradientDark;
+    padding: .5rem;
+    margin: 1rem;
+    width: 75%;
+}
+
 .login {
     width: 100%;
     height: 100%;
@@ -42,16 +51,20 @@ html {
         border-radius: 7px;
         //background-color: $backgroundColor;
         input {
-            padding: .5rem;
-            margin: 1rem;
-            width: 75%;
-            border-radius: 7px;
+            //padding: .5rem;
+            //margin: 1rem;
+            //width: 75%;
+            //border-radius: 7px;
+
         }
     }
 }
 h1,h2, h3, h4, h5, h6 {
     margin: 1rem;
     font-weight: $heavyFont !important;
+}
+h1 {
+    font-size: 1.5rem;
 }
 .card {
     padding: .2rem;
@@ -75,6 +88,30 @@ h1,h2, h3, h4, h5, h6 {
 .neo-up {
     box-shadow: $neoUpShadow;
 }
+.neo-down {
+    box-shadow: $neoDownShadow;
+}
+.bubble {
+    border-radius: 10px;
+    position: relative;
+    padding: 1rem;
+   /* input {
+        border: none;
+        background-color: transparent;
+        position: absolute;
+        width: 90%;
+        height: 100%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }*/
+}
+.bubble-active {
+    background-color: $neoUpGradient;
+}
+.bubble-inactive {
+    opacity: .6;
+}
 
 .cardHolder {
    display: flex;
@@ -95,6 +132,7 @@ h1,h2, h3, h4, h5, h6 {
     background-color: $backgroundColor;
     z-index: 1;
     box-shadow: $boxShadow;
+
     .primary {
         margin: .75rem;
     }
@@ -107,18 +145,27 @@ h1,h2, h3, h4, h5, h6 {
         transform: translate(-50%, -50%);
         text-align: center;
         margin: auto;
-        padding: 2rem;
-        min-width: 75%;
+        //padding: 2rem;
+        min-width: 85%;
         max-height: 100%;
         overflow-y: auto;
+        overflow-x: hidden;
         background: $neoUpGradient;
         z-index: 3;
         border-radius: 7px;
         //background-color: $backgroundColor;
         input {
-            padding: .5rem;
-            margin: 1rem;
-            width: 75%;
+
+        }
+        .modalBody {
+            padding: 2rem;
+        }
+        .modalFooter {
+            background-color: $gradientDark;
+            width: 100%;
+            position: sticky;
+            bottom: 0;
+            left: 0;
         }
     }
     .modal-bg {
@@ -136,3 +183,8 @@ h1,h2, h3, h4, h5, h6 {
 .specificClientName{
     margin: auto;
 }
+
+.phaseButton {
+    width: 100% !important;
+}
+
